# rabb1tClaw

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  deploy-local.sh
docs/: codebase.md  config.md  howtosystem.md  install.md  modelsupport.md  workflow.md
docs/protocol/: openclaw_ws_spec_full.md  protocol_openclaw.md  protocol_rabb1tclaw.md  rabb1tClaw_ws_spec.md
src/: main.rs  protocol.rs  state.rs
src/agent/: dispatch.rs  events.rs  markers.rs  memory.rs  mod.rs  runner.rs  session.rs  stream.rs  tasklog.rs  tracker.rs
src/agent/advanced/: agent.rs  mod.rs  tracker.rs
src/agent/code/: agent.rs  helpers.rs  mod.rs  sandbox.rs  tracker.rs
src/agent/search/: agent.rs  mod.rs  tracker.rs
src/cli/: defaults.rs  devices.rs  init.rs  mod.rs  models.rs  providers.rs  server.rs
src/config/: config_reference.txt  devices.rs  mod.rs  native.rs  pid.rs  reload.rs
src/connection/: auth.rs  handler.rs  mod.rs  server.rs
src/prompts/: system.md  system_advanced.md  system_code.md  system_memory.md  system_search_analyze.md  system_search_evaluate.md  system_search_synthesize.md
src/provider/: anthropic.rs  mod.rs  openai.rs
tests/: advanced.rs  device_isolation.rs  sandbox.rs  search.rs  testmodels.rs
