[package]
name = "rabb1tclaw"
version = "0.3.1"
edition = "2021"
description = "Minimal Rust LLM gateway for Rabbit R1 and other devices"
license = "MIT"
repository = "https://github.com/nesdeq/rabb1tClaw"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server & WebSocket
axum = { version = "0.7", features = ["ws"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Security
constant_time_eq = "0.3"

# Encryption (session-at-rest)
aes-gcm = "0.10"
sha2 = "0.10"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
directories = "6"
qrcode = "0.14"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"

# Streaming
futures = "0.3"

# Tokenization
tiktoken-rs = "0.9"

hakoniwa = "1.3"
rs-trafilatura = { git = "https://github.com/Murrough-Foley/rs-trafilatura" }

openssl-sys = { version = "0.9", features = ["vendored"] }


[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
